# DesktopTimer

./: .gitignore  AGENTS.md  DesktopTimer.spec  LICENSE  README.md  TECHNICAL.md  UPGRADE_GUIDE.md  desktop_timer.py  index.html  main.py  pyinstaller.bat  pyproject.toml  requirements.txt
lang/: en_US.json  zh_CN.json
module/: app.py  constants.py  localization.py  paths.py  settings_dialog.py  timer_window.py
scripts/: main.js
settings/: timer_settings.json
setup/: SetUp.iss  setup.iss
styles/: main.css
tools/: Run.bat  ensure_multi_size_ico.py  pyinstaller.bat  update_version.py
