[project]
name = "DesktopTimer"
version = "2.0.1"
description = "Lightweight PyQt6 desktop timer with count up, countdown, and clock modes."
readme = "README.md"
requires-python = ">=3.13,<3.14"
license = "GPL-3.0-or-later"
dependencies = [
    "PyQt6>=6.6.0",
    "PyQt6-Fluent-Widgets>=1.11.0",
    "win10toast>=0.9",
    "setuptools<81",
]

[project.urls]
Homepage = "https://github.com/RE-TikaRa/DesktopTimer"

[dependency-groups]
dev = [
    "pyinstaller",
    "ruff>=0.15.0",
]

[build-system]
requires = ["setuptools>=68,<81"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["module"]
